Fix header font anti-aliasing and logo spacing

--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ body {
   color: var(--color-text-main);
   line-height: 1.7;
   overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 h1, h2, h3, h4, h5, h6 {
